--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT="5000"
-MONGO_CONN ="mongodb+srv://preetom:12345@handicraft-businesses.sxs8w.mongodb.net/handicraftdatabase?retryWrites=true&w=majority&appName=handicraft-businesses"
+MONGO_CONN ="mongodb+srv://chandadebi892:4l9SdAKindlk7pvU@cluster0.2amtg.mongodb.net/handicraft?retryWrites=true&w=majority&appName=Cluster0"
 JWT_SECRET="secret-123"
 
 
